<resources>
    <string name="app_name">Run</string>

    <!-- Alerts -->
    <string name="gps_disabled">Your GPS seems to be disabled, please ensure that you have enabled "Location" and the mode is not set to battery saving.</string>
    <string name="save_run_alert">Would you like to save this run?</string>
    <string name="delete_run">Are you sure you want to delete this run?</string>
    <string name="run_added">Run added!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Tab names and activity names -->
    <string name="tab_current_run">Current run</string>
    <string name="tab_finished_runs">Finished runs</string>

    <!-- Buttons -->
    <string name="start_run_button">Start run</string>
    <string name="stop_run_button">Stop run</string>

    <!-- Display finished run activity-->
    <string name="duration">Duration</string>
    <string name="average_speed">Average speed</string>
    <string name="distance">Distance</string>
    
    <!-- Marker titles -->
    <string name="start">Start</string>
    <string name="end">End</string>

    <!-- Text views -->
    <string name="timer_text_view">00:00:00</string>
    <string name="speed_text_view">0 km/h</string>
    <string name="distance_text_view">0.0 km</string>

    <!-- Content description -->
    <string name="delete_button">Red delete image</string>

    <!-- Foreground notification -->
    <string name="stop_looking">Stop looking at your phone, you should be running!</string>

</resources>
