<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context="oxhammar.nicklas.run.fragments.CurrentRunFragment">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        tools:context="oxhammar.nicklas.run.fragments.CurrentRunFragment" />


    <RelativeLayout
        android:id="@+id/textViewGridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:columnCount="3"
        android:rowCount="2">

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="20dp"
            android:text="@string/timer_text_view"
            android:textColor="@color/colorGray"
            android:textSize="40sp"

            android:textStyle="bold" />


        <TextView
            android:id="@+id/speedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/timerTextView"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/marginButton"
            android:text="@string/speed_text_view"
            android:textColor="@color/colorGray"
            android:textSize="30sp"

            android:textStyle="bold" />

        <Button
            android:id="@+id/marginButton"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:clickable="false"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timerTextView"
            android:layout_marginTop="20dp"

            android:layout_toStartOf="@+id/marginButton"
            android:text="@string/distance_text_view"
            android:textColor="@color/colorGray"
            android:textSize="30sp"

            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/runButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/start_button"
            android:text="@string/start_run_button"
            android:textAllCaps="false" />
    </RelativeLayout>

</LinearLayout>
