<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context="oxhammar.nicklas.run.activities.DisplayFinishedRunActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/finishedRunMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:context="oxhammar.nicklas.run.activities.DisplayFinishedRunActivity" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:orientation="horizontal">

        <TextView
            android:id="@+id/finishedDurationTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"

            android:text="@string/duration"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"

            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="center_horizontal"
            app:layout_row="0"
            app:layout_rowWeight="1" />


        <TextView
            android:id="@+id/finishedSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:text="@string/average_speed"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"

            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="center_horizontal"
            app:layout_row="1"
            app:layout_rowWeight="1"

            />


        <TextView
            android:id="@+id/finishedDistanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:text="@string/distance"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"

            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="center_horizontal"
            app:layout_row="2"
            app:layout_rowWeight="1"

            />
    </android.support.v7.widget.GridLayout>


</LinearLayout>
